# real-cartpole-control-using-ur5-direct-torque

./: .gitignore  AGENTS.md  environment.yml
config/: coppeliasim_movement_primitives.yaml  lab_workspace_guardrails.yaml
controller_core/: __init__.py  actuation_shadow.py  box_qp.py  cartpole_linear_model.py  controller_interfaces.py  filters.py  joint_impedance.py  kinematics_utils.py  logging_utils.py  lqr_controller.py  mpc_controller.py  mujoco_cartpole_state.py  recoverability_monitor.py  safety.py  safety_filter.py  safety_utils.py  state_types.py  torque_task_qp.py  transport_lqr.py  x_axis_cartesian_impedance.py  x_axis_controller.py
demonstration_videos/: .gitkeep
docs/: CURRENT_STATUS.md  PROJECT_PLAN.md  README.md  WORKSPACE_MAP.md
hardware/: __init__.py  logging.py  (+6 more)
ros2_ws/src/real_cartpole_control/: package.xml  setup.cfg  setup.py
ros2_ws/src/real_cartpole_control/config/: origin_hold.yaml
ros2_ws/src/real_cartpole_control/launch/: origin_hold.launch.py
ros2_ws/src/real_cartpole_control/real_cartpole_control/: __init__.py  origin_hold_controller.py
ros2_ws/src/real_cartpole_control/resource/: real_cartpole_control
ros2_ws/src/real_cartpole_moveit_config/: CMakeLists.txt  package.xml
ros2_ws/src/real_cartpole_moveit_config/config/: joint_limits.yaml  kinematics.yaml  moveit_controllers.yaml  real_cartpole.srdf  ros2_controllers.yaml
ros2_ws/src/ur5_x_axis_controller_ros/: package.xml  setup.cfg  setup.py
ros2_ws/src/ur5_x_axis_controller_ros/config/: controller.yaml  controller_after_stable.yaml  controller_coppelia_after_stable_seeded_relaxed.yaml  controller_coppelia_bringup.yaml  controller_coppelia_fast_x.yaml  controller_coppelia_legacy_xz_transport.yaml  controller_coppelia_legacy_xz_transport_relaxed.yaml  controller_coppelia_mpc.yaml  controller_coppelia_reciprocating.yaml  controller_coppelia_slow.yaml  controller_coppelia_slow_seeded_probe.yaml  controller_coppelia_slow_seeded_relaxed.yaml  controller_coppelia_y_transport_torque.yaml
ros2_ws/src/ur5_x_axis_controller_ros/launch/: run_controller.launch.py  run_ur5e_hardware_pipeline.launch.py
ros2_ws/src/ur5_x_axis_controller_ros/ur5_x_axis_controller_ros/: __init__.py  config_loader.py  controller_node.py  coppeliasim_adapter.py  coppeliasim_bridge_node.py  jacobian_provider.py  messages.py  ur5e_hardware_pipeline_node.py
(+185 files in other folders)
